--- a/UserSystem/pom.xml
+++ b/UserSystem/pom.xml
@@ -49,12 +49,12 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.0</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>sharedGroup</groupId>-->
-            <!--<artifactId>JEA_Microservice.shared</artifactId>-->
-            <!--<version>1.0-SNAPSHOT</version>-->
-            <!--<scope>compile</scope>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>sharedGroup</groupId>
+            <artifactId>JEA_Microservice.shared</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     
 </project>
