--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -37,6 +37,16 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.8</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
