--- a/ChatSystem/pom.xml
+++ b/ChatSystem/pom.xml
@@ -39,6 +39,16 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.8.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>4.3.5.Final</version>
+        </dependency>
     </dependencies>
 
 
