--- a/AuthenticationSystem/pom.xml
+++ b/AuthenticationSystem/pom.xml
@@ -46,6 +46,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13-beta-2</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>groupId</groupId>-->
             <!--<artifactId>UserSystem</artifactId>-->
